style: lint style

--- a/src/docs/3. Fundamentals-基本原则/3.2.2. Promise Ordering.md
+++ b/src/docs/3. Fundamentals-基本原则/3.2.2. Promise Ordering.md
@@ -13,5 +13,11 @@ https://www.w3.org/TR/webgpu/#promise-ordering
 - GPUDevice.popErrorScope()
 
 有其他的例外：
-1. 对与 GPUQueue q，存在 p1 = q.onSubmittedWorkDone();p2 = q.onSubmittedWorkDone();p1 在 p2 之前执行，那么 p1 的结果一定在 p2 之前完成。
-2. 对于在一个 GPUDevice 中的 GPUQueue q 和 GPUBuffer b，p1 = b.mapAsync();p2 = q.onSubmittedWorkDone();那么 p1 的结果一定在 p2 之前完成。
+1. 对与 GPUQueue q，存在:
+    p1 = q.onSubmittedWorkDone();
+    p2 = q.onSubmittedWorkDone();
+    p1 在 p2 之前执行，那么 p1 的结果一定在 p2 之前完成。
+2. 对于在一个 GPUDevice 中的 GPUQueue q 和 GPUBuffer b:
+    p1 = b.mapAsync();
+    p2 = q.onSubmittedWorkDone();
+    那么 p1 的结果一定在 p2 之前完成。
