feat: add GPUBuffer

--- a/src/docs/5. Buffers/5.1 GPUBuffers.md
+++ b/src/docs/5. Buffers/5.1 GPUBuffers.md
@@ -49,6 +49,7 @@ enum GPUBufferMapState {
 };
 ```
 
+## GPUBuffer usage
 GPUBufferUsage 指定 GPUBuffer 的使用类型
 ```js
 namespace GPUBufferUsage {
@@ -112,3 +113,6 @@ The buffer can be used as to store indirect command arguments. (Examples: as the
 - QUERY_RESOLVE
 The buffer can be used to capture query results. (Example: as the destination argument of a resolveQuerySet() call.)
 
+# func
+
+## mapAsync
