feat: add GPUExternalTexture / video

--- a/src/docs/6. Textures and Texture Views/6.4 GPUExternalTexture.md
+++ b/src/docs/6. Textures and Texture Views/6.4 GPUExternalTexture.md
@@ -1,1 +1,52 @@
 GPUExternalTexture 是一个封装外部视频对象的可采样 2D 纹理。GPUExternalTexture 对象的内容是一个快照，可能不会改变，无论是来自 WebGPU 内部(它只是可采样的)还是来自 WebGPU 外部(例如，由于视频帧的推进)。
+
+### Importing External Textures
+外部的纹理是通过 importExternalTexture() 方法根据一个外部视频对象创建的。
+从 HTMLVideoElement 创建的外部纹理在倒入后并不像其他资源一样通过手动销毁或者垃圾回收销毁，而是只有在源 videoFrame 关闭销毁的时候销毁。
+```js
+var parentElement = vieo.parentNode;
+parentElement.removeChild(video);
+```
+在 GPUExternalTexture 过期后，我们需要重新调用 importExternalTexture() 方法重新生成。
+
+### Example
+use requestAnimationFrame
+```js
+const videoElement = document.createElement('video');
+// ... set up videoElement, wait for it to be ready...
+
+function frame() {
+    requestAnimationFrame(frame);
+
+    // Always re-import the video on every animation frame, because the
+    // import is likely to have expired.
+    // The browser may cache and reuse a past frame, and if it does it
+    // may return the same GPUExternalTexture object again.
+    // In this case, old bind groups are still valid.
+    const externalTexture = gpuDevice.importExternalTexture({
+        source: videoElement
+    });
+
+    // ... render using externalTexture...
+}
+requestAnimationFrame(frame);
+```
+
+use requestVideoFrameCallback
+```js
+const videoElement = document.createElement('video');
+// ... set up videoElement...
+
+function frame() {
+    videoElement.requestVideoFrameCallback(frame);
+
+    // Always re-import, because we know the video frame has advanced
+    const externalTexture = gpuDevice.importExternalTexture({
+        source: videoElement
+    });
+
+    // ... render using externalTexture...
+}
+videoElement.requestVideoFrameCallback(frame);
+
+```
