feat: cube map texture demo optamize

--- a/src/docs/1. Introduction.md
+++ b/src/docs/1. Introduction.md
@@ -1,3 +1,33 @@
 《在线文档地址：https://www.w3.org/TR/webgpu/#intro》
 
 图形处理单元，或者简称为 GPUs，在个人计算应用和允许增强渲染的时候是必不可少的。
+
+## WebGPU 的销毁
+核心原则
+- WebGPU 的资源（如 Buffer, Texture, ShaderModule, Pipeline 等）与创建它们的 Device 是强绑定的。
+- 正确的资源管理和销毁策略是：在 device.destroy() 被调用之前，手动释放所有由该 device 创建的资源。
+
+### 停止所有正在进行的渲染 / 计算工作：
+确保没有任何 CommandBuffer 正在等待提交，或者正在 GPU 上执行。
+如果你有一个动画循环（如 requestAnimationFrame），请停止它。
+
+### 手动释放所有资源：
+遍历你在代码中创建的所有 WebGPU 资源（Buffer, Texture, TextureView, Sampler, ShaderModule, ComputePipeline, RenderPipeline, BindGroupLayout, BindGroup, QuerySet 等）。
+调用每个资源的 destroy() 方法。
+
+需要手动销毁的主要资源：
+Buffer: buffer.destroy()
+Texture: texture.destroy()
+QuerySet: querySet.destroy()
+
+不需要手动销毁的资源：
+ShaderModule, ComputePipeline, RenderPipeline, BindGroupLayout, BindGroup, Sampler, TextureView 等。这些资源通常不直接占用 GPU 内存（或者说它们的 GPU 内存是由其他资源间接管理的），当它们在 JavaScript 中失去所有引用后，会被 GC 回收。
+
+### 解除所有 JavaScript 引用：
+
+### 最后调用 device.destroy()：
+在完成上述所有清理工作后，再调用 device.destroy()。
+这会通知 WebGPU 实现，该 device 及其相关的 GPU 上下文可以被彻底清理。
+
+## device
+## 
